contact_navigation_fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dineshdvn123.github.io/aira_tech",
+  "homepage": "http://dineshdvn123.github.io/",
   "name": "aira_tech",
   "version": "0.1.0",
   "private": true,
