--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteBase /
-    RewriteRule ^index\.html$ - [L]
+  
     RewriteCond %{REQUEST_URI} !^/jobs/ [NC]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.html [L]
+    RewriteRule ^ index.html [L]
   </IfModule>
   
