--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.18.3",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "intersection-observer": "^0.12.2",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
